--- a/config/corne.conf
+++ b/config/corne.conf
@@ -74,13 +74,22 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # ######################################################
 ## OLED Display
+#CONFIG_ZMK_DISPLAY=y
+#CONFIG_ZMK_EXT_POWER=y
+#CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+#CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+#CONFIG_ZMK_WIDGET_WPM_STATUS=y
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_STACK_SIZE=2048
 CONFIG_ZMK_EXT_POWER=y
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_DISPLAY=y
+CONFIG_DISPLAY_LOG_LEVEL_ERR=y
+CONFIG_SSD1306=y
+CONFIG_SSD1306_I2C_MASTER_DEV_NAME="I2C_1"
+CONFIG_SSD1306_DEV_NAME="SSD1306"
 
 
 # Uncomment these two lines to add support for encoders
